--- a/dev/Nitro/get.html
+++ b/dev/Nitro/get.html
@@ -11,6 +11,7 @@
 <body>
 	<nav>
 		<ul>
+			<li class="tagleft"><p style="color:white">Nitro<span style="color:#1FBFBF">JS</span> <span style="color:#cc3333">//Download</span></p></li>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="#">Get it</a></li>
 			<li><a href="docs.html">Documentation</a></li>
