--- a/dev/Nitro/index.html
+++ b/dev/Nitro/index.html
@@ -11,6 +11,7 @@
 <body>
 	<nav>
 		<ul>
+			<li class="tagleft"><p style="color:white">Nitro<span style="color:#1FBFBF">JS</span></p></li>
 			<li><a href="#">Home</a></li>
 			<li><a href="get.html">Get it</a></li>
 			<li><a href="docs.html">Documentation</a></li>
