--- a/dev/Nitro/docs.html
+++ b/dev/Nitro/docs.html
@@ -10,11 +10,8 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Roboto|Oxygen|Varela+Round' rel='stylesheet' type='text/css'>
 	
-	<link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
-	
-	<link href="http://alexgorbatchev.com/pub/sh/current/styles/shCore.css" rel="stylesheet" type="text/css" />
-	<script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
-	<script src="http://alexgorbatchev.com/pub/sh/current/scripts/shBrushJScript.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/monokai-sublime.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
 	
 </head>
 <body>
@@ -40,9 +37,9 @@
 		<h3>Basics</h3>
 		<a href="#gettingstarted">Getting Started</a><br>
 		<a href="#version">Version</a><br>
+		<a href="#manifest">Manifests</a><br>
 		<a href="#permissions">Permissions</a><br>
 		<a href="#helloworld">Hello World</a><br>
-		<a href="#manifest">Manifests</a><br>
 		<h3>Advanced</h3>
 		<a href="#nitrixcore">NitrixCore</a><br>
 		<a href="#webstreaming">Web Streaming</a><br>
@@ -50,13 +47,13 @@
 		<a href="#app">apps</a><br>
 		<a href="#permission">permission</a><br>
 		<a href="#system">system</a><br>
+		<a href="#net">networking</a><br>
 		<a href="#fs">filesystem</a><br>
 		<a href="#storage">storage</a><br>
-		<a href="#net">networking</a><br>
 		<a href="#updateApp">updates</a><br>
 	</div>
 	
-	<div class="blockfill"></div>
+	<div class="super">Basics</div><br>
 	
 	<div class="sidebar">
 		<h1 id="gettingstarted">Getting started!</h1>
@@ -71,27 +68,236 @@
 		<p>The default API-blocks (aka block modules) will not be changed. We will only ever add to the Block modules list.</p><br>
 	</div>
 	<div class="sidebar">
+		<h1 id="manifest">Manifest</h1>
+		<p>Every NitroJS application has to start from a manifest file. Manifests in NitroJS are written in JSON (javascript object notation). They provide the NitrixCore with information about the web-app it is about to run. Manifest files contains things like name, version, runtime information, icons etc. Web-streamed application also require a manifest file. All NitroJS application manifests must have the name 'manifest.json' (This applies to Nitro v2 and below, v3 and above may use any name as long as it has the '.nitro.json' extension)</p>
+		<br>
+		<pre><code class="json">
+			{
+				"application":{
+					"name":"example application",
+					"version": "2.0.0.1",
+					"icon":"*/myicon.icon",
+					"homepage":"*/firstpage.html"
+				},
+				"runtime":{
+					"version":"1.0.0.6"
+				}
+			}
+		</code></pre>
+		<br>
+		<p>Asterisks are used to get the current directory of the manifest. We recommend that you keep the manifest file in the same directory as the first page you intend to load. TIP: Avoid making changes and loading the manifest file while the app is running.</p>
+		<br>
+	</div>
+	<div class="sidebar">
 		<h1 id="permissions">Permissions</h1>
-		<p>In order for your application to access system level information and capabilities, you will need to declare something called permissions. Permissions give you extended features and access to parts of the system, enabling you to utilize the whole environment. In order to run block Modules, you will need to request permission to use them from NitroJS, in turn preventing unauthorised access. Although permissions is a block module, it does not have to be declared itself.</p> <br>
+		<p>In order for your application to access system level information and capabilities, you will need to declare something called permissions. Permissions give you extended features and access to parts of the system, enabling you to utilize the whole environment. In order to run block Modules, you will need to request permission to use them from NitroJS, in turn preventing unauthorised access. Although permissions is a block module, it does not have to be declared itself. Setting permission is easy:</p>
+		<br>
+		<pre><code class="javascript">
+			permission.add("fs"); //To access the filesystem
+			permission.add("storage"); //To access the app's temporary storage
+		</code></pre>
+		<br>
 	</div>
 	<div class="sidebar">
 		<h1 id="helloworld">Hello World</h1>
 		<p>Getting started with NitroJS is easy. In fact, making applications with NitroJS is just as easy as making a basic HTML webpage. However, if you want to add awesome functionalities to your application, you will need to set and initialise NitrixCore. This is an example of how you would set things up:</p>
-		<pre class="brush:js">
+		<br>
+		<pre><code class="javascript">
 			StartX(); //Runs manifest loader to load application information into memory
 			var Nitro = new NitroCore(); //sets new object to be used
-			Nitro.import("prefixfree");
-			Nitro.import("jquery");
-			Nitro.addPermission("app"); //sets permission to use "app" domain
-		</pre>
+			Nitro.import("jquery"); //prepares library to be imported when needed
+			Nitro.addPermission("app"); //sets permission to use "app" block module
+			
+			var appName = app.get("applicationName"); //gets the application name
+			var username = app.get("currentUser"); //gets name of user currently logged on
+			
+			alert("Hello " + username + ", you are currently using " + appName);
+		</code></pre>
+		<br>
 	</div>
+	
+	<div class="super">Advanced</div><br>
+	
+	<div class="sidebar">
+		<h1 id="nitrixcore">NitrixCore</h1>
+		<p>The NitrixCore is the main engine behind all of the content computation. It works together with NitroJS and the NitroCore to provide user-level access and information, as well as entry-level communication with the system. In other words, the NitrixCore provides native-feel and speed while the NitroCore and NitroJS prepares and formats the web documents to be processed by the NitrixCore :)</p>
+		<br>
+	</div>
+	
+	<div class="sidebar">
+		<h1 id="webstreaming">Web-Streaming</h1>
+		<p>The NitrixCore (with the help of the NitroJS) gives you the ability to stream your web-application directly to your client-side. This allows you to push updates almost instantly; as soon as an update is made, your users will automatically be running the latest version all without having to restart the NitroJS environment. Note: The downside to this is that your users will be prompted to grant access to the permissions you define every-time your app runs.</p>
+		<br>
+	</div>
+	
+	<div class="super">Block Modules</div><br>
+	
+	<div class="sidebar">
+		<h1 id="app">apps</h1>
+		<p>This block module allows you to access application-level information, while changing the environment's properties:</p>
+		<br>
+		<pre><code>
+			app.get('applicationName'); //returns the application name
+			app.get('applicationVersion'); //returns the application version
+			app.get('runtimeVersion'); //returns the runtime version
+			app.get('Name'); //returns the text displayed in the titlebar
+			app.get('currentUser'); //returns the name of user currently logged in
+			app.all(); //returns a list of all the information
+		</code></pre>
+		<br>
+		<p>Using this block Module, you can directly control the environmnet and runtime of your application:</p>
+		<br>
+		<pre><code class="javascript">
+			app.close(); //asynchronously closes the application
+			app.restart(); //quick-restarts the application
+			app.maximize(); //maximizes the window
+			app.minimize(); //minimizes the window to taskbar
+			app.normal(); //sets the windows size to normal
+			app.showBorder(boolean); //sets the visibility of the borders
+			app.setpos(x,y); //asynchronously sets the position of the window
+			app.setsize(width,height); //asynchronously sets the size of the window
+			app.getpos(); //asynchronously returns xy property values
+			app.getsize(); //asynchronously returns width and height property values
+		</code></pre>
+		<br>
+	</div>
+	
+	<div class="sidebar">
+		<h1 id="permission">permission</h1>
+		<p>This block module allows you to request and retrieve access information for other block modules. Unlike other block modules, this block module is not bound by permission.</p>
+		<br>
+		<pre><code class="javascript">
+			permission.add('block-module-name'); //defines permission request to use block module
+			
+			permission.remove('block-module-name'); /*revokes all access to specified
+			block module (user will be prompted to regrant access if permission is re-added) */
+			
+			permission.list(); //returns a list of all permissions granted
+			
+			permission.addList('block-module-name', 'block-module-name2', 'block-module-name3')
+			//asynchronously defines the specified permissions  [recommended!]
+		</code></pre>
+		<br>
+	</div>
+	
+	<div class="sidebar">
+		<h1 id="system">system</h1>
+		<p>Using the 'system' block module, we are able to directly communicate with the host shell, here is how you would run a program with administrative rights:</p>
+		<br>
+		<pre><code class="javascript">
+			var options = {useShell:"true", app:"applicationpath.exe", asAdmin:"true"};
+			system.run(options);
+			//NitroJS will formulate the options and pass it to the NitrixCore which then communicates with the appropriate service, passing the options as parameters.
+		</code></pre>
+		<br>
+		<p>We can also use the 'system' block module to get system-level paths and directories on the user's machine:</p>
+		<br>
+		<pre><code class="javascript">
+			system.path("appdata");
+			system.path("mydocument"); 
+			system.path("mycomputer");
+			system.path("desktop");
+			system.path("mymusic");
+			system.path("mypictures");
+			system.path("myvideos");
+			system.path("root"); //returns the directory where the operating system is installed
+			system.path("launch"); //returns the folder where NitroJS is installed
+		</code></pre>
+		<br>
+		<p>Just like we were able to run other external application from 'run', we are able to use 'system' to execute scripts or files:</p>
+		<br>
+		<pre><code class="javascript">
+			system.execute("scriptpath.bat"); //runs the script from command line/terminal
+			system.execute("application-with-ext"); //runs the application from command line/terminal
+		</code></pre>
+		<br>
+	</div>
+	
+	<div class="sidebar">
+		<h1 id="net">networking</h1>
+		<p>The 'net' block module allows you to natively upload, download, ping and check computer connectivity:</p>
+		<br>
+		<pre><code class="javascript">
+			var myAppdata = system.path("appdata");
+			net.downloadFile("http://example.com/file.txt", myAppdata, "username", "password"); //with login
+			net.downloadFile("http://example.com/file.txt", myAppdata); //without login
+			
+			net.uploadFile(myAppdata+"/file.txt", "http://example.com/file1.txt", "username", password); //with login
+			net.uploadFile(myAppdata+"/file.txt", "http://example.com/file1.txt"); //without login
+			
+			net.ping("http://google.com"); //pings the website, returns availability as boolean
+			
+			net.available(); //returns true if computer is connected to the internet
+			
+			net.uploadFileFTP(myAppdata+"/file.txt", "http://example.com/file1.txt", "username", password); //with login
+			net.uploadFileFTP(myAppdata+"/file.txt", "http://example.com/file1.txt"); //without login
+		</code></pre>
+		<br>
+	</div>
+	
+	<div class="sidebar">
+		<h1 id="fs">filesystem</h1>
+		<p>The 'fs' block module allows you to have filesystem-level access and control. It enables you to quickly and asynchronously ammend files on the system.</p>
+		<br>
+		<pre><code class="javascript">
+			var filepath = system.path("desktop") +"/file.txt"; 
+			var newpath = system.path("mydocuments") + "/file.txt";
+			
+			fs.createFile(filePath); //creates the file
+			var theContent = 'hello '; 
+			fs.writeFile(filePath,theContent,false); //sets contents of the file to 'hello', overwritting old content
+			console.write(theContent); 
+			fs.writeFile(filePath,'world',true); //adds 'world' to existing content in file
+			var finalContent = fs.readFile(filePath); //reads the file
+			console.write(finalContent); 
+			fs.deleteFile(filePath); //deletes the file
+			fs.checkFile(filePath); //checks if file still exists
+			fs.moveFile(filePath, newpath); //moves the file
+			fs.renameFile(filePath, "file2.txt"); //changes the name of the file to 'file2.txt'
+			
+			fs.moveFolder(oldLocation, newLocation); //moves folder from one directory to another
+			fs.renameFolder(oldLocationAndName, newName); //changes the name of the folder
+			fs.createFolder(folderNameAndPath); //creates a new folder
+		</code></pre>
+		<br>
+	</div>
+	
+	<div class="sidebar">
+		<h1 id="storage">storage</h1>
+		<p>The 'storage' block module allows you to temporarily store information without having to write to disk. All data pushed to be stored is converted into an object for storage. As no data is written to disk, all data is lost when the app shuts down.</p>
+		<br>
+		<pre><code class="javascript">
+			storage.store("myname", "bob"); //temporarily stores the word "bob" into storage compartment named "myname"
+			storage.fetch("myname"); //returns 'bob'
+		</code></pre>
+		<br>
+	</div>
+	
+	<div class="sidebar">
+		<h1 id="updateApp">update</h1>
+		<p>When the NitroJS runtime first runs, it requires information about the web-app it will be loading in order to make the whole experience fast, secure and fluid. It gets this information from the manifest file of the web-app. In order to retreive the information, you will need to either call the 'StartX' function from the NitroJS helper or manually load the file yourself.</p>
+		<br>
+		<pre><code class="javascript">
+			//easy way:
+			StartX();
+			
+			//long way:
+			var Nitro = new NitroCore(); //sets new object to be used
+			Nitro.addPermission("fs"); //sets permission to use "fs" block module to access the manifest file
+			var jsonContent = fs.readFile('manifest.json');
+			var load = new loader(); //creates a new NitroManifest loader
+			load.manifest(jsonContent); //loads the manifest
+		</code></pre>
+		<br>
+	</div>
+	
 	<footer>
 		<br>
 		NitroJS 2015
 		<p class="snip">Made with <span style="color:red">&#10084;</span> by NucleonBytes</p>
 	</footer>
 	<script type="text/javascript">
-     	SyntaxHighlighter.all()
+     	hljs.initHighlightingOnLoad();
 	</script>
 </body>
 </html>
