--- a/dev/Nitro/index.html
+++ b/dev/Nitro/index.html
@@ -25,7 +25,13 @@
 		<br>
 		<p class="mid">Build awesome desktop application with web technologies</p>
 	</div>
-	<br>
+	
+	<div class="blockfill"></div>
+	<div class="blockfill"></div>
+	
+	<div class="container">
+		<a class="button" href="docs.html">DOCUMENTATION</a>
+	</div>
 	
 	<div class="blockfill"></div>
 	<div class="blockfill"></div>
