--- a/features.html
+++ b/features.html
@@ -76,6 +76,7 @@
       <h1><i class="material-icons">extension</i></h1>
       <br>
       <p class="bigp">We have invested a lot of time into making our own development tools so that developing for our client was fast, effective and above all, productive. Our prefered sets of IDEs are Sublime, Atom, and Tizen8. Tizen8 is our web-powered development tool created using open source plugins, to help us develop state of the arts websites and web-applications.</p>
+      <a href="dev/Nitro/index.html">*See our new product here*</a>
     </div>
     <br>
   <footer>
