--- a/dev/Nitro/index.html
+++ b/dev/Nitro/index.html
@@ -45,7 +45,7 @@
 		<div class="triplet">
 			<h1><i class="material-icons">autorenew</i></h1>
 			<h2>Up-to-date</h2>
-			<p>Our home-grown model allows us to continuously add and remove to the NitrixCore, keeping it safe and bug-free on yours and your clients' side.</p>
+			<p>Our native model allows us to continuously add and remove to the NitrixCore, keeping it safe and bug-free on yours and your clients' side.</p>
 		</div>
 		<div class="triplet">
 			<h1><i class="material-icons">cloud_queue</i></h1>
