--- a/dev/Nitro/get.html
+++ b/dev/Nitro/get.html
@@ -29,7 +29,7 @@
 	
 	<div class="blockfill"></div>
 	<div class="container">
-		<a class="button" href="index.html">DOWNLOAD</a>
+		<a class="button" href="NitroJS.zip">DOWNLOAD</a>
 	</div>
 	
 	<div class="blockfill"></div>
