--- a/dev/Nitro/docs.html
+++ b/dev/Nitro/docs.html
@@ -35,7 +35,7 @@
 	<div class="floaty">
 		<h1 style="color:#cc3333">Quick Jump</h1>
 		<h3>Basics</h3>
-		<a href="#gettingstarted">Getting Started</a><br>
+		<a href="#gettingstarted">Getting Started</a> <span class="updated">Updated!</span><br>
 		<a href="#version">Version</a><br>
 		<a href="#manifest">Manifests</a> <span class="updated">Updated!</span><br>
 		<a href="#permissions">Permissions</a><br>
@@ -49,7 +49,7 @@
 		<a href="#system">system</a><br>
 		<a href="#net">networking</a><br>
 		<a href="#fs">filesystem</a><br>
-		<a href="#storage">storage</a><br>
+		<a href="#storage">storage</a> <span class="new">New!</span><br>
 		<a href="#debug">debug</a> <span class="new">New!</span><br>
 	</div>
 	
@@ -82,7 +82,10 @@
 		<h1 id="gettingstarted">Getting started!</h1>
 		<p>This documentation has been written to help developers get into grips with the whole concept and approach to web-application development in NitroJS. Our API documentation is meant to provide detailed (yet easy to understand) information about a given feature or method.</p>
 		<br>
-		<p>By using this documentation, you should be able to learn and utilise NitroJS and its components. Please remember, this documentation isnt just for those starting out in web-application development, it is also for those legendary developers out there looking for a reference.</p><br>
+		<p>By using this documentation, you should be able to learn and utilise NitroJS and its components. Please remember, this documentation isnt just for those starting out in web-application development, it is also for those legendary developers out there looking for a reference.</p>
+		<br>
+		<p>We also have an option for those who learn better while working; Head over to our <a href="kickstart.html">kickstart</a><span class="new">New!</span> page, to get started with our mini step-by-step NitroJS development guide!</p>
+		<br>
 	</div>
 	<div class="sidebar">
 		<h1 id="version">Version</h1>
